# data_608

./: hw_1.ipynb  hw_1.qmd  pyproject.toml  story 1.xlsx
hw_1/: hw_1.qmd  hw_1_excel.qmd
